init self ffmpeg builder